--- a/src/examples/echo/BUILD.gn
+++ b/src/examples/echo/BUILD.gn
@@ -9,7 +9,7 @@ group("echo") {
   deps = [
     ":benchmark",
     ":client",
-    ":client_sync",
+    ":client_standalone",
     ":server",
   ]
 }
