--- a/src/examples/echo/BUILD.gn
+++ b/src/examples/echo/BUILD.gn
@@ -55,6 +55,10 @@ mojo_native_application("client_standalone") {
     ":bindings",
     ":bindings_sync",
     "//base",
+    "//mojo/public/c/system",
+    "//mojo/public/cpp/environment:standalone",
+    "//mojo/public/cpp/application:standalone",
+    "//mojo/public/cpp/bindings",
     "//mojo/edk/base_edk",
     "//mojo/edk/system",
     "//mojo/edk/platform",
