--- a/src/examples/echo/BUILD.gn
+++ b/src/examples/echo/BUILD.gn
@@ -54,7 +54,7 @@ executable("client_standalone") {
   deps = [
     ":bindings",
     ":bindings_sync",
-    "//shell/native_application_support",
+    "//shell:native_application_support",
     "//base",
     "//base/allocator",
     "//build/config/sanitizers:deps",
