--- a/src/examples/echo/BUILD.gn
+++ b/src/examples/echo/BUILD.gn
@@ -54,6 +54,8 @@ executable("client_standalone") {
   deps = [
     ":bindings",
     ":bindings_sync",
+    "//shell:common_lib",
+    "//shell:child_controller_bindings",
     "//shell:native_application_support",
     "//base",
     "//base/allocator",
