Preliminary object store design

--- a/src/apps/BUILD.gn
+++ b/src/apps/BUILD.gn
@@ -17,6 +17,7 @@ group("apps") {
   deps = [
     ":portable_apps",
     "//apps/benchmark",
+    "//apps//objstore",
     "//apps/benchmark:apptests",
   ]
 }
