Preliminary code for raylib

--- a/src/apps/BUILD.gn
+++ b/src/apps/BUILD.gn
@@ -18,6 +18,7 @@ group("apps") {
     ":portable_apps",
     "//apps/benchmark",
     "//apps//objstore",
+    "//apps/rayclient:raylib",
     "//apps/benchmark:apptests",
   ]
 }
