--- a/src/shell/BUILD.gn
+++ b/src/shell/BUILD.gn
@@ -195,6 +195,7 @@ source_set("parent_lib") {
     "url_resolver.h",
     "url_response_disk_cache_loader.cc",
     "url_response_disk_cache_loader.h",
+    "../apps/rayclient/exchange_file_descriptor.cc",
   ]
 
   deps = [
