more work on plasma

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -16,6 +16,8 @@ group("default") {
     "//examples",
     "//mojo",
     "//mojom",
+    "//ray",
+    "//plasma",
     "//services",
     "//shell",
   ]
